Create Project Milestones and Tasks

--- a/force-app/main/default/lwc/progressBar/progressBar.html
+++ b/force-app/main/default/lwc/progressBar/progressBar.html
@@ -24,10 +24,10 @@
             label={steps.tasks.label}
             value={steps.tasks.value}
           ></lightning-progress-step>
-          <lightning-progress-step
+          <!-- <lightning-progress-step
             label={steps.summary.label}
             value={steps.summary.value}
-          ></lightning-progress-step>
+          ></lightning-progress-step> -->
         </lightning-progress-indicator>
 
         <!-- STEPS FORM -->
