--- a/force-app/main/default/lwc/tasksManagementForm/tasksManagementForm.html
+++ b/force-app/main/default/lwc/tasksManagementForm/tasksManagementForm.html
@@ -12,7 +12,7 @@
             <template
               for:each={milestone.tasks}
               for:item="task"
-              for:index="taskId"
+              for:index="index"
             >
               <div
                 key={task.id}
