Task Controller and Task Trigger

--- a/force-app/main/default/lwc/milestoneManagmentForm/milestoneManagmentForm.html
+++ b/force-app/main/default/lwc/milestoneManagmentForm/milestoneManagmentForm.html
@@ -5,7 +5,7 @@
         <template for:each={milestoneData} for:item="milestone" for:index="i">
           <lightning-accordion-section
             name={milestone.name}
-            label={milestone.type}
+            label={milestone.name}
             key={id}
           >
             <div class="slds-grid slds-gutters slds-m-bottom_medium">
