--- a/force-app/main/default/lwc/milestoneManagmentForm/milestoneManagmentForm.html
+++ b/force-app/main/default/lwc/milestoneManagmentForm/milestoneManagmentForm.html
@@ -1,5 +1,5 @@
 <template>
-  <lightning-card title="DEFINE MILESTONES" icon-name="standard:lead_list">
+  <lightning-card title="DEFINE MILESTONES" icon-name="custom:custom53">
     <div class="slds-p-around_medium">
       <lightning-accordion allow-multiple-sections-open>
         <template for:each={milestoneData} for:item="milestone" for:index="i">
