--- a/force-app/main/default/lwc/approvalManagementForm/approvalManagementForm.html
+++ b/force-app/main/default/lwc/approvalManagementForm/approvalManagementForm.html
@@ -76,24 +76,24 @@
         </div>
 
         <!-- Success Actions -->
-        <!-- <div class="slds-grid slds-grid_align-center slds-gutters">
-            <div class="slds-col">
-              <lightning-button
-                label="View Project"
-                variant="brand"
-                onclick={handleViewProject}
-                class="slds-m-right_small"
-              >
-              </lightning-button>
+        <div class="slds-grid slds-grid_align-center slds-gutters">
+          <div class="slds-col">
+            <lightning-button
+              label="View Project"
+              variant="brand"
+              onclick={handleViewProject}
+              class="slds-m-right_small"
+            >
+            </lightning-button>
 
-              <lightning-button
-                label="Create Another Project"
-                variant="neutral"
-                onclick={handleCreateAnother}
-              >
-              </lightning-button>
-            </div>
-          </div> -->
+            <lightning-button
+              label="Create Another Project"
+              variant="neutral"
+              onclick={handleCreateAnother}
+            >
+            </lightning-button>
+          </div>
+        </div>
       </div>
     </div>
   </lightning-card>
