status project badge

--- a/force-app/main/default/lwc/projectOverview/projectOverview.html
+++ b/force-app/main/default/lwc/projectOverview/projectOverview.html
@@ -36,7 +36,7 @@
           <div class="slds-text-align_right">
             <lightning-badge
               label={projectStatus}
-              variant={statusVariant}
+              class={statusProjectVariant}
             ></lightning-badge>
             <div class="slds-m-top_x-small">
               <p class="slds-text-body_small">Start: {projectData.startDate}</p>
